--- a/style.css
+++ b/style.css
@@ -62,15 +62,58 @@ body {
 
 .discordrpc {
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    margin-top: 50px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.aboutme {
+.GreyWhiteButtonT {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #ffffff;
+    border-radius: 1dvh;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
     text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 40%;
+    display: block;
+    margin: auto;
+    margin-bottom: 20px;
+    margin-top: 50px;
+  }
+  
+  .GreyWhiteButtonT:hover {
     color: #fff;
-    margin-top: 30px;
-    margin-bottom: auto;
-}
+    background-color: #303030;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+  }
+  
+  .GreyWhiteButtonT:active {
+    box-shadow: none;
+    transform: translateY(0);
+  }
+
+  .NoTextDecoration {
+    text-decoration: none;
+  }
+
+  .center {
+    text-align: center;
+    margin-top: 40px;
+  }
